some additional ch1 examples

--- a/advanced-programming-unix-env/ch01/Makefile
+++ b/advanced-programming-unix-env/ch01/Makefile
@@ -1,8 +1,14 @@
 CC=gcc
-CFLAGS=-I -Wall 
+CFLAGS=-I -Wall
 
 myls: myls.o error.o
 	gcc -o $@ $^ $(CFLAGS)
 
+rw_stdin_stdout: rw_stdin_stdout.o error.o
+	gcc -o $@ $^ $(CFLAGS)
+
+lameshell_1_5: lameshell_1_5.o error.o
+	gcc -o $@ $^ $(CFLAGS)
+
 clean:
-	rm -f myls *.o
+	rm -f myls rw_stdin_stdout lameshell_1_5 *.o
